fabscanpi-server (0.3.0) unstable; urgency=medium

  * refactored whole software for making it more flexible
  * added splash screen to frontend
  * added auto upgrade to frontend and backend
  * fixed major laser detection error
  * fixed some 3D calculation bugs
  * simplified the laser settings dialog (threshold values etc.) better preview now

 -- Mario Lukas  <info@mariolukas.de>  Wed, 8 Jul 2016 17:52:00 +0000

fabscanpi-server (0.2.1) unstable; urgency=medium

  * fixed avrdude flashing for FabScan HAT
  * added new dependencies to control file

 -- Mario Lukas  <info@mariolukas.de>  Wed, 6 Jul 2016 20:57:00 +0000


fabscanpi-server (0.2.0) unstable; urgency=medium

  * fixed issue #5, heavy CPU load
  * refactored system callings, introduced new utils for system calls
  * system call stdouts are in logs now
  * added meshalabserver support by calling via xvfb
  * fixed mpjeg close stream bug in chrome and firefox
  * added idle spinner to stream preview window
  * prepared frontend for laser stepper support
  * replaced threejs v70 by a newer version v74
  * refactored webgl directive, added support for switching between mesh and pointcloud (experimental)
  * refactored laser detection algorithm, it is more stable now.
  * refactored and extended share dialog options
  * made version number of firmware and server visible in main window
  * added calibration stream option
  * refactored httpRequestHandler
  * refactored REST api
  * replaced angular-slick
  * added meshlab support to frontend
  * refactored file handling
  * fixed status bar
  * added new icons

 -- Mario Lukas  <info@mariolukas.de>  Sat, 12 Mar 2016 01:11:11 +0000


fabscanpi-server (0.1.15) unstable; urgency=medium

  * added auto detection for arduino
  * fixed firmware autoflash bug, it finds the correct hex file now.
  * refactored and cleaned FSSerial.py
  * removed serial port from default config
  * added some additional connection messages to frontend