@@ -18,4 +18,6 @@ window.i18n["main"]["SERIAL_CONNECTION_READY"] = function(d){return "Arduino/Fab
 window.i18n["main"]["CAMERA_READY"] = function(d){return "Camera ready"}
 window.i18n["main"]["MESHING_STARTED"] = function(d){return "Meshing started."}
 window.i18n["main"]["MESHING_DONE"] = function(d){return "Meshed file is available now"}
+window.i18n["main"]["START_CALIBRATION"] = function(d){return "Calibration started."}
+window.i18n["main"]["FINISHED_CALIBRATION"] = function(d){return "Calibration finished."}
 })();
